--- a/.github/workflows/autotest_prs.yml
+++ b/.github/workflows/autotest_prs.yml
@@ -64,7 +64,9 @@ jobs:
 
     - name: Run AWS script
       shell: bash
-      run: go run ./etc/aws_client/main.go
+      working-directory: ./etc/aws_client
+      run: |
+        go run ./...
 
     - name: Uploading code coverage report to Codecov
       uses: codecov/codecov-action@v4
