--- a/integration/fixtures/test-config.yaml
+++ b/integration/fixtures/test-config.yaml
@@ -13,9 +13,11 @@ service:
 endpoints:
   local-fs:
     name: local-fs
+    id: 550e8400-e29b-41d4-a716-446655440000
     provider: local
     root: ./local-fs
   s3-foo:
+    id: 6ba7b810-9dad-11d1-80b4-00c04fd430c8
     bucket: test-bucket-integration-foo
     region: us-east-1
     access_key_id: minioadmin
@@ -24,6 +26,7 @@ endpoints:
     path_style: true
     provider: s3
   s3-bar:
+    id: f47ac10b-58cc-4372-a567-0e02b2c3d479
     bucket: test-bucket-integration-bar
     region: us-east-1
     access_key_id: minioadmin
@@ -32,6 +35,7 @@ endpoints:
     path_style: true
     provider: s3
   s3-baz:
+    id: 123e4567-e89b-42d3-a456-426614174000
     bucket: test-bucket-integration-baz
     region: us-east-1
     access_key_id: minioadmin
