--- a/integration/fixtures/test-config.yaml
+++ b/integration/fixtures/test-config.yaml
@@ -15,7 +15,7 @@ endpoints:
     name: local-fs
     id: 550e8400-e29b-41d4-a716-446655440000
     provider: local
-    root: ./local-fs
+    root: .
   s3-foo:
     id: 6ba7b810-9dad-11d1-80b4-00c04fd430c8
     bucket: test-bucket-integration-foo
