--- a/.github/workflows/autotest_prs.yml
+++ b/.github/workflows/autotest_prs.yml
@@ -7,16 +7,7 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
-env:
-  DTS_KBASE_DEV_TOKEN: ${{ secrets.DTS_KBASE_DEV_TOKEN }}
-  DTS_KBASE_TEST_ORCID: ${{ secrets.DTS_KBASE_TEST_ORCID }}
-  DTS_KBASE_TEST_USER: ${{ secrets.DTS_KBASE_TEST_USER }}
-  DTS_GLOBUS_CLIENT_ID: ${{ secrets.DTS_GLOBUS_CLIENT_ID }}
-  DTS_GLOBUS_CLIENT_SECRET: ${{ secrets.DTS_GLOBUS_CLIENT_SECRET }}
-  DTS_GLOBUS_TEST_ENDPOINT: ${{ secrets.DTS_GLOBUS_TEST_ENDPOINT }}
-  DTS_JDP_SECRET: ${{ secrets.DTS_JDP_SECRET }}
-  DTS_NMDC_USER: ${{ secrets.DTS_NMDC_USER }}
-  DTS_NMDC_PASSWORD: ${{ secrets.DTS_NMDC_PASSWORD }}
+
 
 jobs:
 
@@ -59,8 +50,19 @@ jobs:
     - name: Testing DTS against real services
       id: test
       shell: bash
+      env:
+        DTS_KBASE_DEV_TOKEN: ${{ secrets.DTS_KBASE_DEV_TOKEN }}
+        DTS_KBASE_TEST_ORCID: ${{ secrets.DTS_KBASE_TEST_ORCID }}
+        DTS_KBASE_TEST_USER: ${{ secrets.DTS_KBASE_TEST_USER }}
+        DTS_GLOBUS_CLIENT_ID: ${{ secrets.DTS_GLOBUS_CLIENT_ID }}
+        DTS_GLOBUS_CLIENT_SECRET: ${{ secrets.DTS_GLOBUS_CLIENT_SECRET }}
+        DTS_GLOBUS_TEST_ENDPOINT: ${{ secrets.DTS_GLOBUS_TEST_ENDPOINT }}
+        DTS_JDP_SECRET: ${{ secrets.DTS_JDP_SECRET }}
+        DTS_NMDC_USER: ${{ secrets.DTS_NMDC_USER }}
+        DTS_NMDC_PASSWORD: ${{ secrets.DTS_NMDC_PASSWORD }}
       run: |
-        go test -v ./... -coverprofile=coverage.out -covermode=atomic
+        PACKAGES=$(go list ./... | grep -v /integration)
+        go test -v $PACKAGES -coverprofile=coverage.out -covermode=atomic
       continue-on-error: true # load coverage even if tests fail
 
     - name: Testing DTS against mock services
