--- a/etc/irods/pyproject.toml
+++ b/etc/irods/pyproject.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.10"
 dependencies = [
+    "boto3>=1.41.5",
     "python-irodsclient>=3.2.0",
 ]
