--- a/.github/workflows/irods.yml
+++ b/.github/workflows/irods.yml
@@ -35,19 +35,26 @@ jobs:
 
     - name: Set up iRODS and iRODS S3 API
       working-directory: etc/irods
+      run: docker compose -f docker-compose.yml up -d --build
+
+    - name: Install AWS CLI
       run: |
-        docker compose -f docker-compose.yml up -d --build
-        echo "Waiting for iRODS S3 API to be healthy..."
+        sudo apt-get update
+        sudo apt-get install -y awscli
+
+    - name: Wait for iRODS S3 API to be ready
+      run: |
+        echo "Waiting for iRODS S3 API to be ready..."
         for i in {1..30}; do
-          STATUS=$(curl -s -o /dev/null -w '%{http_code}' http://localhost:9010/health)
-          if [ "$STATUS" = "200" ]; then
-            echo "iRODS S3 API is healthy."
+          if aws --endpoint-url http://localhost:9010 s3 ls >/dev/null 2>&1; then
+            echo "iRODS S3 API is ready!"
             exit 0
+          else
+            echo "iRODS S3 API not ready yet. Retrying in 5 seconds..."
+            sleep 5
           fi
-          echo "iRODS S3 API status: $STATUS. Waiting..."
-          sleep 10
         done
-        echo "iRODS S3 API did not become healthy in time."
+        echo "iRODS S3 API did not become ready in time."
         exit 1
 
     - name: Building DTS
