address review comments

--- a/.github/workflows/irods.yml
+++ b/.github/workflows/irods.yml
@@ -62,4 +62,4 @@ jobs:
     - name: Run iRODS Integration Tests
       env:
         DTS_TEST_WITH_IRODS: "true"
-      run: go test -v ./integration_irods/...
+      run: go test -v ./integration/irods/...
