--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -9,6 +9,9 @@ jobs:
   format:
     name: Run formatting
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
 
     steps:
       - name: Checkout code
